--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,11 @@ header li a:hover {
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
+
 }
+
+
 .banner .cloud-rocket {
   width: 46%;
   bottom: 0;
@@ -208,7 +212,32 @@ header li a:hover {
   left: 50%;
   z-index: 1;
   transform: translateX(-50%);
+  animation: growShrinkMove 8s ease-in-out forwards;
+ 
 }
+
+
+@keyframes growShrinkMove {
+  0% {
+    width: 46%;
+    bottom: -50%; 
+    transform: translateX(-50%) scale(1); 
+  }
+  50% {
+    width: 400%;
+    bottom: 0;
+    transform: translateX(-50%) scale(1); 
+  }
+  100% {
+    width: 46%;
+    bottom: 0;
+    transform: translateX(-50%) scale(1);
+  }
+}
+
+
+
+
 .banner .p-cloud-l {
   position: absolute;
   left: 0;
