--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,13 +45,13 @@ body {
 }
 
 .container-fluid {
-  max-width: 1440px;
+  max-width: 1470px;
   width: 100%;
   margin: auto;
   padding: 0 15px;
 }
 .main-container {
-  max-width: 1170px;
+  max-width: 1250px;
   width: 100%;
   margin: auto;
   padding: 0 15px;
@@ -146,6 +146,7 @@ header {
   width: 100%;
   z-index: 99;
 }
+
 header .logo {
   max-width: 100px;
   width: 100%;
@@ -157,7 +158,17 @@ header .logo {
 header .logo img {
   width: 100%;
 }
-
+header .hamburger {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  display: none;
+  background-color: #ffffff;
+  padding: 5px 5px 5px 35px;
+  border-radius: 40px;
+}
 header .header-wrap {
   position: relative;
   display: flex;
@@ -778,12 +789,18 @@ header li a:hover {
   max-width: 390px;
   width: 100%;
 }
+.we-serve .slider-wraper {
+  padding-left: 15px;
+}
 .we-serve .serve-slider {
   margin-top: 50px;
+  padding-left: calc((100vw - 1260px) / 2);
 }
 .we-serve .s-box {
   height: 376px;
   position: relative;
+  border-radius: 35px;
+  overflow: hidden;
 }
 .we-serve .bx-content {
   position: absolute;
