--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,6 +26,17 @@
     font-size: 45px;
     line-height: 50px;
   }
+  .p-top{
+    padding-top: 90px;
+  }
+  .p-btm{
+    padding-bottom: 90px;
+  }
+  .we-serve .custom-nav button{
+    width: 50px;
+    height: 50px;
+  }
+
 }
 
 @media only screen and (max-width: 992px) {
@@ -34,7 +45,7 @@
   }
   header nav {
     position: absolute;
-    right: -100%;
+    right: calc(-100% - 70px);
     top: 60px;
     width: 200px;
     padding: 10px 15px;
@@ -54,6 +65,29 @@
   .banner {
     height: 600px;
   }
+  .p-top{
+    padding-top: 50px;
+  }
+  .p-btm{
+    padding-bottom: 50px;
+  }
+  .we-serve .s-box {
+    height: 250px;
+}
+.we-serve .s-box strong {
+  font-size: 35px;
+  line-height: 40px;
+}
+.we-serve .progress-bar-wrapper{
+  max-width: 280px;
+}
+.banner h1{
+  line-height: 56px;
+}
+.why-choose-us .overall-client,
+.why-choose-us .h-client{
+  margin-top: 20px;
+}
 }
 
 @media only screen and (max-width: 768px) {
@@ -70,6 +104,32 @@
   .banner .main-container {
     padding-top: 120px;
   }
+  .p-top{
+    padding-top: 40px;
+  }
+  .p-btm{
+    padding-bottom: 40px;
+  }
+  .we-serve .s-box {
+    height: 200px;
+}
+.we-serve .s-box strong {
+  font-size: 30px;
+  line-height: 35px;
+}
+.heading {
+  font-size: 40px;
+  line-height: 48px;
+}
+.we-serve .progress-bar-wrapper{
+  max-width: 180px;
+}
+.we-serve .custom-nav{
+  gap: 15px;
+}
+.subheading{
+  font-size: 26px;
+}
 }
 
 @media only screen and (max-width: 576px) {
@@ -98,4 +158,44 @@
   .banner {
     height: 375px;
   }
+  .p-top{
+    padding-top: 30px;
+  }
+  .p-btm{
+    padding-bottom: 30px;
+  }
+  .we-serve .s-box strong {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .heading {
+    font-size: 26px;
+    line-height: 34px;
+}
+  .we-serve .wrap{
+    gap: 0 15px;
+    margin-top: 20px;
+  }
+  .we-serve .custom-nav button{
+    width: 40px;
+    height: 40px;
+  }
+  .we-serve .custom-nav svg{
+    width: 20px;
+  }
+  .banner small {
+    max-width: 350px;
+    margin: auto;
+    width: 100%;
+}
+.subheading{
+  font-size: 20px;
+  font-weight: normal;
+}
+.we-serve .s-box{
+  height: 150px;
+}
+header nav{
+  width: 100%;
+}
 }
