--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,9 +166,16 @@ header .hamburger {
   cursor: pointer;
   display: none;
   background-color: #ffffff;
-  padding: 5px 5px 5px 35px;
+  padding: 5px 5px 5px 5px;
   border-radius: 40px;
+  transition: all 0.4s  ease-in;
 }
+
+header.open_nav .hamburger {
+
+  padding: 5px 5px 5px 35px;
+}
+
 header .header-wrap {
   position: relative;
   display: flex;
@@ -323,6 +330,7 @@ header li a:hover {
   color: var(--black);
   font-size: 16px;
   font-weight: 400;
+  display: block;
 }
 .banner h1 {
   font-size: 65px;
