--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -942,8 +942,9 @@ header li a:hover {
   margin-top: 50px;
   padding-left: calc((100vw - 1260px) / 2);
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 20px;
+  overflow-x: hidden;
 }
 .case-studies .slider h4 {
   font-size: 18px;
@@ -977,10 +978,13 @@ header li a:hover {
 }
 .case-studies .slider {
   width: 50%;
+  max-width: 50%;
+  flex-basis: 50%;
 }
 .case-studies .slider-card {
-  flex-grow: 1;
+  flex-grow: 2;
   overflow: hidden;
+  flex-basis: auto;
 }
 
 .case-studies .wrap {
@@ -1025,25 +1029,43 @@ header li a:hover {
   border-radius: 30px;
   overflow: hidden;
   position: relative;
-  background-color: #555555;
-}
-.case-studies .slider-card-wrap::-webkit-scrollbar {
-  display: none;
-}
-.case-studies .slider-card-wrap {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow: auto;
-  gap: 20px;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  transition: transform 1000ms;
-  overscroll-behavior-x: contain;
-  padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  cursor: grabbing;
-  cursor: -webkit-grabbing;
+  padding: 20px;
 }
 
+.case-studies .slider-card .bx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.case-studies .slider-card .bx > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  height: 100%;
+}
+.case-studies .slider-card .bx p {
+  color: var(--black);
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.case-studies .slider-card .bx a {
+  width: 50px;
+  height: 50px;
+  background-color: var(--white);
+  border-radius: 100px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  transition: all 0.3s linear;
+}
+.case-studies .slider-card .bx a:hover {
+  width: 70px;
+}
 /*====case-studies====*/
