--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -119,6 +119,24 @@
   footer .subheading{
     margin-bottom: 10px;
   }
+  footer .social{
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  footer .social ul{
+    justify-content: center;
+    margin-top: 10px;
+    gap: 20px;
+  }
+  footer   .copy-right{
+    text-align: center;
+  }
+  footer .copy-right strong{
+    margin-bottom: 5px;
+  }
+  footer .copy-right p{
+    margin-bottom: 6px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -329,5 +347,33 @@
 }
 footer .subheading {
   margin-bottom: 0;
+}
+footer .social h6{
+  font-size: 18px;
+}
+footer .social ul svg {
+  margin-right: 0;
+  width: 24px;
+  display: block;
+  text-align: center;
+  margin: auto;
+}
+footer .social ul a{
+  font-size: 12px;
+}
+
+footer .social ul{
+  gap: 0;
+  justify-content: space-between;
+}
+footer .copyRight-wrap {
+  margin-top: 30px;
+}
+footer .ftr-bnr {
+  padding: 25px 15px 0;
+}
+.banner .w-cloud-l,
+.banner .w-cloud-r{
+  bottom: 30px;
 }
 }
