--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -108,33 +108,33 @@
     padding: 20px 20px;
     font-size: 18px;
   }
-  footer .lts-connect{
+  footer .lts-connect {
     text-align: center;
     margin-bottom: 30px;
   }
-  footer .lts-connect p{
+  footer .lts-connect p {
     margin: 0 auto 20px auto;
     font-size: 14px;
   }
-  footer .subheading{
+  footer .subheading {
     margin-bottom: 10px;
   }
-  footer .social{
+  footer .social {
     text-align: center;
     margin-bottom: 20px;
   }
-  footer .social ul{
+  footer .social ul {
     justify-content: center;
     margin-top: 10px;
     gap: 20px;
   }
-  footer   .copy-right{
+  footer .copy-right {
     text-align: center;
   }
-  footer .copy-right strong{
+  footer .copy-right strong {
     margin-bottom: 5px;
   }
-  footer .copy-right p{
+  footer .copy-right p {
     margin-bottom: 6px;
   }
 }
@@ -221,9 +221,10 @@
   .banner .main-container {
     padding-top: 90px;
   }
-  .slide-btn span {
-    width: 30px;
-    height: 30px;
+  .slide-btn span,
+  .access-btn span {
+    width: 40px;
+    height: 40px;
     padding: 6px;
   }
   .slide-btn {
@@ -336,44 +337,44 @@
     font-size: 30px;
     letter-spacing: 5px;
   }
-  .why-choose-us .t-btm{
+  .why-choose-us .t-btm {
     margin-top: 20px;
   }
-  footer .widget h5{
+  footer .widget h5 {
     margin-bottom: 10px;
   }
   footer .widget > div {
     margin-bottom: 10px;
-}
-footer .subheading {
-  margin-bottom: 0;
-}
-footer .social h6{
-  font-size: 18px;
-}
-footer .social ul svg {
-  margin-right: 0;
-  width: 24px;
-  display: block;
-  text-align: center;
-  margin: auto;
-}
-footer .social ul a{
-  font-size: 12px;
-}
+  }
+  footer .subheading {
+    margin-bottom: 0;
+  }
+  footer .social h6 {
+    font-size: 18px;
+  }
+  footer .social ul svg {
+    margin-right: 0;
+    width: 24px;
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+  footer .social ul a {
+    font-size: 12px;
+  }
 
-footer .social ul{
-  gap: 0;
-  justify-content: space-between;
-}
-footer .copyRight-wrap {
-  margin-top: 30px;
-}
-footer .ftr-bnr {
-  padding: 25px 15px 0;
-}
-.banner .w-cloud-l,
-.banner .w-cloud-r{
-  bottom: 30px;
-}
+  footer .social ul {
+    gap: 0;
+    justify-content: space-between;
+  }
+  footer .copyRight-wrap {
+    margin-top: 30px;
+  }
+  footer .ftr-bnr {
+    padding: 25px 15px 0;
+  }
+  .banner .w-cloud-l,
+  .banner .w-cloud-r {
+    bottom: 30px;
+  }
 }
